Fixed missing border radius for password fields.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Form.css
@@ -26,15 +26,15 @@ select[multiple=multiple] {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     /* Opera 10.5 has per default a grey background */
     background-color: #FFF;
-    -webkit-box-shadow: 0 1px 2px #E8E8E8 inset, 0 1px 0 #FFF;
-    box-shadow: 0 1px 2px #E8E8E8 inset, 0 1px 0 #FFF;
+    -webkit-box-shadow: inset 1px 1px 3px #eee, inset -1px -1px 3px #eee;
+    box-shadow: inset 1px 1px 3px #eee, inset -1px -1px 3px #eee;
 }
 
-input[type=text] {
+input[type=text],
+input[type=password] {
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
-    box-shadow: inset 1px 1px 3px #eee, inset -1px -1px 3px #eee;
 }
 
 select[multiple=multiple] {
